# evalpoint-rag

./: .gitignore  README.md  main.py  pyproject.toml
faiss_index/: index.faiss  index.pkl
rag/: __init__.py  __main__.py  chunker.py  constants.py  datatype.py  ingestion.py  logger.py  rag.py
researchengine/: __init__.py  __main__.py  engine.py  llm_utils.py  logger.py  prompts.py  utils.py  web_utils.py
researchengine/chains/: assistant_instructions_chain.py  search_and_summarization_chain.py  search_result_and_summary_chain.py  search_results_chain.py  web_searches_chain.py
